--- a/src/main/webapp/WEB-INF/view/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/template.xhtml
@@ -81,8 +81,19 @@
                 <div class="container-fluid" style="padding-bottom: 5px;//148px;">
                     <div class="row-fluid">
                         <div class="span3" style="margin: 0 -2% 0 0.3%">
-                                    <ui:insert name="sidebar" />  
+                            <ui:insert name="sidebar" />  
                         </div>
+                        <!--<div class="container">
+                            <div class="row row-offcanvas row-offcanvas-right">
+
+                                <div class="col-xs-12 col-sm-9">
+                                    <p class="pull-right visible-xs">
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+                                    </p>
+                                </div>
+                            </div>   
+                        </div>-->
+
                         <div class="container-content" style="float: right;">
                             <div class="container-content">
                                 <ocp:messages id="messages" globalOnly="true" />
